# Snake_cosmos

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: app.js  index.html  styles.css
src/snake_cosmos/: __init__.py  __main__.py  app.py  catalog.py  core.py  persistence.py
src/snake_cosmos/content/: __init__.py  foods.json  items.json
tests/: test_core.py
