[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snake-cosmos"
version = "0.1.0"
description = "Desktop-first modern snake game with a portable gameplay core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pygame-ce>=2.5.2",
]

[project.scripts]
snake-cosmos = "snake_cosmos.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
snake_cosmos = ["content/*.json"]
